DB backup and Task Scheduler List views

--- a/totalhr.web/Views/Task/Add.cshtml
+++ b/totalhr.web/Views/Task/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model totalhr.web.ViewModels.TaskSchedulerVM
+﻿@model totalhr.web.ViewModels.TaskSchedulerDetailsVM
 
 @{
     ViewBag.Title = "Add Task";
